fix chamilo social-content-right, and overflow duplicate

--- a/main/css/chamilo/default.css
+++ b/main/css/chamilo/default.css
@@ -3679,10 +3679,9 @@ div.image-social-content center.friend {
 
 #social-content-right {
 	height:auto;
-	overflow:hidden;	
-	width:72%;
-	float:left;
 	overflow:hidden;
+	float:left;
+
 }
 
 .social-content-image {
