--- a/main/css/chamilo_electric_blue/default.css
+++ b/main/css/chamilo_electric_blue/default.css
@@ -3586,7 +3586,6 @@ div.image-social-content center.friend {
 	height:auto;
 	overflow:hidden;	
 	float:left;
-	overflow:hidden;
 }
 
 
