--- a/main/css/chamilo_orange/default.css
+++ b/main/css/chamilo_orange/default.css
@@ -3587,7 +3587,6 @@ div.image-social-content center.friend {
 	height:auto;
 	overflow:hidden;	
 	float:left;
-	overflow:hidden;
 }
 
 .social-content-image {
