--- a/main/css/chamilo_red/default.css
+++ b/main/css/chamilo_red/default.css
@@ -3598,7 +3598,6 @@ div.image-social-content center.friend {
 	height:auto;
 	overflow:hidden;	
 	float:left;
-	overflow:hidden;
 }
 
 .social-content-image {
